Add index.html and about.html files with initial content

--- a/1_FEM_HTML_Project/about.html
+++ b/1_FEM_HTML_Project/about.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blog</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>It's me "Marouane Touzani"</h1>
-    <p>I'm a pro</p>
+    
 </body>
 </html>
