Refactor code structure for improved readability and maintainability

--- a/1_FEM_HTML_Project/about.html
+++ b/1_FEM_HTML_Project/about.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
 </head>
 <body>
-    
+    <h1>About Me</h1>
+    <h3>Hi my name is "Marouane Touznai"</h3>
+<p>I'm a Profesional JAVA devloper certified by Oracle. Student at App Academy San Francisco based coding bootcamp and studied software engineering at alx.</p>
 </body>
 </html>
