--- a/1_FEM_HTML_Project/index.html
+++ b/1_FEM_HTML_Project/index.html
@@ -7,6 +7,52 @@
 </head>
 <body>
     <h1>It's me "Marouane Touzani"</h1>
-    <p>I'm a pro</p>
+    <p>I made this blog just for posting some pictures about art, I love music!</p>
+    <!--<p>I'm a Profesional JAVA devloper certified by Oracle. Student at App Academy San Francisco based coding bootcamp and studied software engineering at alx.</p>-->
+<br/>
+    <div>
+        <h2>Old Piano</h2>
+        <h3>This picture by "Vladislav Nahorny"</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img src="old piano.jpg" alt="girl holding old piano">
+        <p>This Picture Cuptred in 27/2/2021</p>
+    </div>
+<br/>
+    <div>
+        <h2>Adele</h2>
+        <h3>This picture by "Simon Emmett"</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img src="adele.png" alt="adele picture">
+        <p>This Picture Cuptred in 15/3/2019</p>
+    </div>
+    <br/>
+    <div>
+        <h2>Kendrick Lamar</h2>
+        <h3>This picture by "Alen Moley"</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img src="lamar.png" alt="Kendrick Lamar picture">
+        <p>This Picture Cuptred in 28/6/2018</p>
+    </div>
+    <br/>
+    <div>
+        <h2>L'morphinr</h2>
+        <h3>This picture by "Amine Khaldi"</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img src="l'motpho.png" alt="L'morphine picture">
+        <p>This Picture Cuptred in 23/10/2012</p>
+    </div>
+    <br/>
+    <div>
+        <h2>Queeen</h2>
+        <h3>This picture by "Richard E. Aaron"</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img src="queen.png" alt="Queeen picture">
+        <p>This Picture Cuptred in 1/1/2009</p>
+    </div>
+
+    <br/>
+    <br/>
+    <a href="about.html"><h2>About Me</h2></a>
+
 </body>
 </html>
