Refactor about.html and index.html for improved content structure and readability

--- a/1_FEM_HTML_Project/about.html
+++ b/1_FEM_HTML_Project/about.html
@@ -8,6 +8,14 @@
 <body>
     <h1>About Me</h1>
     <h3>Hi my name is "Marouane Touznai"</h3>
-<p>I'm a Profesional JAVA devloper certified by Oracle. Student at App Academy San Francisco based coding bootcamp and studied software engineering at alx.</p>
+
+    <p> Things that i just studied</p>
+    <ul>
+        <li>I'm a Profesional JAVA devloper certified by Oracle.</li>
+        <li>Student at App Academy San Francisco based coding bootcamp</li>
+        <li>and studied software engineering at alx</li>
+
+    </ul>
+
 </body>
 </html>
