Fix typo in payment section header and enhance structure with additional box class

--- a/2_COFEE_MASTERS/index.html
+++ b/2_COFEE_MASTERS/index.html
@@ -51,9 +51,9 @@
         </ul>
     </section>
 
-    <section class="payment">
+    <section class="payment box">
         <div class="name-box box">
-            <h2 class="box-title">Nmae</h2>
+            <h2 class="box-title">Name</h2>
             <div class="input-group">
                 <label class="user-input-label">Name For Order</label>
                 <input id="name" class="user-input" type="text" >
