Refactor variable assignments for statement, optionButtons, and explanation in Quiz.js

--- a/3_quiz_game/Quiz.js.htm
+++ b/3_quiz_game/Quiz.js.htm
@@ -82,10 +82,13 @@
 
     // TODO 1: Declare & assign variables pointing to the corresponding element(s)
     // statement should be the "statement" div
+    const statement = document.getElementById("statement").textContent;
     // optionButtons should be all the elements within the "options" div
+    let optionButtons = document.querySelector("#options").children;
     // explanation should be the "explanation" div
+    let explanation = document.querySelector("#explanation").textContent;
 
-
+    
 
 
     // TODO 2: Declare & assign a variable called fact
