--- a/3_quiz_game/Quiz.js.htm
+++ b/3_quiz_game/Quiz.js.htm
@@ -117,7 +117,9 @@
 
     // TODO 5: Declare an isCorrect function that compares a guess to the right answer
     // isCorrect(guess) should return true if the guess matches the fact's answer
-    
+    function isCorrect(guess){
+        return guess === fact.answer;
+    }
 
 
     // TODO 6A: Use a for loop to add a click event listener to each of the optionButtons
