--- a/4_doggoProject/4_Doggo_Fetch.htm
+++ b/4_doggoProject/4_Doggo_Fetch.htm
@@ -2,8 +2,8 @@
 <html lang="en-US"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Doggo Fetch</title>
-    
+  <title>Doggo Fetch</title>
+  <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
@@ -24,5 +24,5 @@
 
 
   
-
+  <script src="script.js"></script>
 </body></html>
