--- a/1_FEM_HTML_Project/index.html
+++ b/1_FEM_HTML_Project/index.html
@@ -65,7 +65,7 @@ It's now one of the most iconic songs in music history.</p>
 
     <br/>
     <br/>
-    <a href="about.html"><h2>About Me</h2></a>
+    <a href="about.html"><h2>About ME</h2></a>
 
 </body>
 </html>
