making wrapper div to wrap all the content in one place and article for the first portfolio part

--- a/7_portfolio_FEM/index.html
+++ b/7_portfolio_FEM/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+     <div class="wrapper">
+        <article class="main-article">
+            <div class="text">
         <h2>Frontend Developer</h2>
         <h1>Brissa Isidro</h1>
         <p>Briefly describe your role, a little about yourself, what your expertise is, and where you're based.
@@ -50,8 +53,10 @@
             </li>
 
         </ul>
-
+        </div>
         <img src="https://assets.codepen.io/296057/fem-brissa.jpg" alt="Brissa Isidro." />
+        </article>
+     </div>
 
     </body>
 </html>
