--- a/7_portfolio_FEM/index.html
+++ b/7_portfolio_FEM/index.html
@@ -10,16 +10,15 @@
 
    <div class="wrapper">
   <header>
-        <fieldset id="mode-switcher">
+        <fieldset id="mode-switcher" class="radio-switch">
       <legend>Select a color mode:</legend>
-      <div>
-        <input type="radio" id="light" name="mode" value="light" />
+      
+        <input type="radio" id="light" name="color-scheme" value="light" />
         <label for="light">Light</label>
-      </div>
-      <div>
-        <input type="radio" id="dark" name="mode" value="dark" />
+
+        <input type="radio" id="dark" name="color-scheme" value="dark" />
         <label for="dark">Dark</label>
-      </div>
+
     </fieldset>
   </header>
   <article class="main-article">
